Fina project/fraud-sentinel/k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-api
  labels:
    app.kubernetes.io/name: fraud-sentinel
    app.kubernetes.io/component: api
spec:
  selector:
    app.kubernetes.io/name: fraud-sentinel
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-ui
  labels:
    app.kubernetes.io/name: fraud-sentinel
    app.kubernetes.io/component: ui
spec:
  selector:
    app.kubernetes.io/name: fraud-sentinel
    app.kubernetes.io/component: ui
  ports:
    - name: http
      port: 3000
      targetPort: http
